# crispy-doom

./: .gitignore  CMakeLists.txt
midiproc/: CMakeLists.txt  buffer.cpp  main.cpp
opl/: CMakeLists.txt  ioperm_sys.cpp  opl.cpp  opl.h  opl3.cpp  opl_linux.cpp  opl_obsd.cpp  opl_queue.cpp  opl_sdl.cpp  opl_timer.cpp  opl_win32.cpp
opl/examples/: droplay.cpp
pcsound/: CMakeLists.txt  pcsound.cpp  pcsound_bsd.cpp  pcsound_linux.cpp  pcsound_sdl.cpp  pcsound_win32.cpp
pkg/osx/: Execute.m  IWADController.m
src/: CMakeLists.txt  d_dedicated.cpp  d_event.cpp  d_event.h  d_iwad.cpp  d_iwad.h  d_loop.cpp  d_mode.cpp  d_mode.h  deh_io.cpp  deh_main.cpp  deh_mapping.cpp  deh_mapping.h  deh_str.cpp  deh_str.h  deh_text.cpp  doomtype.h  gusconf.cpp  i_cdmus.cpp  i_endoom.cpp  i_glob.cpp  i_joystick.cpp  i_main.cpp  i_midipipe.cpp  i_musicpack.cpp  i_oplmusic.cpp  i_pcsound.cpp  i_sdlmusic.cpp  i_sdlsound.cpp  i_sound.cpp  i_sound.h  i_system.cpp  i_video.cpp  i_videohr.cpp  m_argv.cpp  m_cheat.cpp  m_config.cpp  m_controls.cpp  m_fixed.cpp  m_misc.cpp  (+34 more)
src/doom/: CMakeLists.txt  am_map.cpp  d_englsh.h  d_main.cpp  d_net.cpp  d_player.h  deh_ammo.cpp  deh_bexincl.cpp  deh_bexpars.cpp  deh_bexptr.cpp  deh_bexstr.cpp  deh_cheat.cpp  deh_doom.cpp  deh_frame.cpp  deh_misc.cpp  deh_ptr.cpp  deh_thing.cpp  deh_weapon.cpp  doomdef.h  doomstat.cpp  f_finale.cpp  f_wipe.cpp  g_game.cpp  hu_lib.cpp  hu_stuff.cpp  info.cpp  info.h  m_background.h  m_menu.cpp  p_bexptr.cpp  p_blockmap.cpp  p_ceilng.cpp  p_doors.cpp  p_enemy.cpp  p_extnodes.cpp  p_extsaveg.cpp  p_floor.cpp  p_inter.cpp  p_lights.cpp  p_local.h  (+30 more)
src/heretic/: CMakeLists.txt  am_map.cpp  ct_chat.cpp  d_main.cpp  d_net.cpp  deh_ammo.cpp  deh_frame.cpp  deh_htext.cpp  deh_htic.cpp  deh_sound.cpp  deh_thing.cpp  deh_weapon.cpp  doomdef.h  f_finale.cpp  g_game.cpp  in_lude.cpp  info.cpp  mn_menu.cpp  p_ceilng.cpp  p_doors.cpp  p_enemy.cpp  p_floor.cpp  p_inter.cpp  p_lights.cpp  p_local.h  p_map.cpp  p_maputl.cpp  p_mobj.cpp  p_plats.cpp  p_pspr.cpp  p_saveg.cpp  p_setup.cpp  p_sight.cpp  p_spec.cpp  p_user.cpp  r_bsp.cpp  r_data.cpp  r_draw.cpp  r_local.h  r_main.cpp  (+6 more)
src/hexen/: CMakeLists.txt  a_action.cpp  am_map.cpp  ct_chat.cpp  d_net.cpp  f_finale.cpp  g_game.cpp  h2_main.cpp  h2def.h  in_lude.cpp  info.cpp  mn_menu.cpp  p_acs.cpp  p_anim.cpp  p_ceilng.cpp  p_doors.cpp  p_enemy.cpp  p_floor.cpp  p_inter.cpp  p_lights.cpp  p_local.h  p_map.cpp  p_maputl.cpp  p_mobj.cpp  p_plats.cpp  p_pspr.cpp  p_setup.cpp  p_spec.cpp  p_switch.cpp  p_telept.cpp  p_things.cpp  p_user.cpp  po_man.cpp  r_bsp.cpp  r_data.cpp  r_draw.cpp  r_local.h  r_main.cpp  r_plane.cpp  r_segs.cpp  (+8 more)
src/setup/: CMakeLists.txt  compatibility.cpp  display.cpp  execute.cpp  joystick.cpp  keyboard.cpp  mainmenu.cpp  mode.cpp  mouse.cpp  multiplayer.cpp  sound.cpp  txt_joyaxis.cpp  txt_joybinput.cpp  txt_keyinput.cpp  txt_mouseinput.cpp
src/strife/: CMakeLists.txt  am_map.cpp  d_englsh.h  d_main.cpp  d_net.cpp  d_player.h  deh_cheat.cpp  deh_frame.cpp  deh_misc.cpp  deh_ptr.cpp  deh_sound.cpp  deh_strife.cpp  deh_thing.cpp  deh_weapon.cpp  doomdef.h  doomstat.cpp  f_finale.cpp  f_wipe.cpp  g_game.cpp  hu_stuff.cpp  info.cpp  m_menu.cpp  m_saves.cpp  p_ceilng.cpp  p_dialog.cpp  p_doors.cpp  p_enemy.cpp  p_floor.cpp  p_inter.cpp  p_lights.cpp  p_local.h  p_map.cpp  p_maputl.cpp  p_mobj.cpp  p_mobj.h  p_plats.cpp  p_pspr.cpp  p_pspr.h  p_saveg.cpp  p_setup.cpp  (+18 more)
textscreen/: CMakeLists.txt  txt_button.cpp  txt_checkbox.cpp  txt_conditional.cpp  txt_desktop.cpp  txt_desktop.h  txt_dropdown.cpp  txt_fileselect.cpp  txt_gui.cpp  txt_inputbox.cpp  txt_io.cpp  txt_io.h  txt_label.cpp  txt_label.h  txt_main.h  txt_radiobutton.cpp  txt_scrollpane.cpp  txt_sdl.cpp  txt_sdl.h  txt_separator.cpp  txt_separator.h  txt_spinctrl.cpp  txt_spinctrl.h  txt_strut.cpp  txt_table.cpp  txt_table.h  txt_utf8.cpp  txt_widget.cpp  txt_window.cpp  txt_window.h  txt_window_action.cpp
textscreen/examples/: calculator.cpp  guitest.cpp
utils/: lump.h  memory.h
win32/: win_opendir.cpp
